# rnd-nexus

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  docker-compose.yml  pyproject.toml
ai-server/: Dockerfile  pyproject.toml
ai-server/src/: config.py  main.py
ai-server/src/agent/: graph.py  local_tools.py  mcp_client.py  state.py
ai-server/src/agent/edges/: should_continue.py  should_replan.py
ai-server/src/agent/generator/: generator_node.py
ai-server/src/agent/nodes/: generate.py  generator.py  llm_call.py  orchestrator.py  parallel_executor.py  planner.py  reflection.py  tool_node.py
ai-server/src/agent/orchestrator/: orchestrator_node.py
ai-server/src/agent/utils/: context.py
ai-server/src/agent/worker/: enrichment.py  worker.py  worker_node.py
ai-server/src/api/: app.py  schemas.py
ai-server/src/api/routes/: admin.py  health.py  query.py  stats.py
ai-server/src/common/: llm.py  parsers.py
ai-server/src/common/config/: query_config.py
ai-server/src/infrastructure/: config_repository.py  mariadb.py
ai-server/src/memory/: compaction.py  session.py  tool_cache.py
ai-server/src/static/: index.html  settings.html
mcp-server/: Dockerfile  pyproject.toml
mcp-server/src/: config.py
mcp-server/src/infrastructure/: component_factory.py  database.py  graph_compiler.py  milvus.py  neo4j.py
mcp-server/src/infrastructure/repositories/: budget_repository.py  in_memory_utils.py  organization_repository.py  paper_repository.py  patent_repository.py  project_repository.py  researcher_repository.py  (+1 more)
mcp-server/src/mcp_server/: server.py
(+40 files in other folders)
