[project]
name = "ai-server"
version = "0.1.0"
description = "R&D AI 에이전트 서버 — 연구자 추천, 기술 추천, 과제 기획"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "langchain-core>=0.3",
    "langgraph>=0.3",
    "langchain-ollama>=0.2",
    "langgraph-checkpoint-redis>=0.0.4",
    "redis>=5.0",
    "rich>=13.0",
    "mcp>=1.28.0",
    "langchain-mcp-adapters>=0.3.0",
    "fastapi>=0.100",
    "uvicorn[standard]>=0.23",
    "sse-starlette>=1.6",
    "python-multipart>=0.0.6",
    "PyMySQL>=1.1",
]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
]

[tool.uv]
package = false

[tool.pyrefly]
search_path = ["src"]
