[project]
name = "mcp-server"
version = "0.1.0"
description = "R&D Nexus MCP 서버 — 도메인 데이터 접근 레이어"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "mcp>=1.28.0",
    "PyMySQL>=1.1",
    "pymilvus>=2.3",
    "neo4j>=5.0",
    "sentence-transformers>=2.2",
]

[tool.uv]
package = false

[tool.pyrefly]
search_path = ["src", "../domain"]
